--- a/app/global.css
+++ b/app/global.css
@@ -26,3 +26,9 @@
     margin: 0;
     padding: 0
 }
+
+html {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+}
