--- a/app/global.css
+++ b/app/global.css
@@ -24,11 +24,12 @@
 
 * {
     margin: 0;
-    padding: 0
+    padding: 0;
 }
 
 html {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    background: #f4f3ec;
 }
