--- a/app/global.css
+++ b/app/global.css
@@ -31,5 +31,5 @@ html {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    background: #f4f3ec;
+    background: rgba(0, 0, 0, 0.54);
 }
